--- a/django-openstack/src/django_openstack/templates/django_openstack/securitygroups/index.html
+++ b/django-openstack/src/django_openstack/templates/django_openstack/securitygroups/index.html
@@ -5,14 +5,6 @@
 {% block content %}
   <div id="dashboard_tabs">
     <div id="tabs-1" class="ui-tabs-panel ui-widget-content ui-corner-bottom dash-wrap" style="margin-left:0px;min-height:300px;">
-      <ul id="dashboard_nav">
-        <li><a id="lnk_overview" href="{% url dashboard_project project.projectname %}">Overview</a></li>
-        <li><a id="lnk_instances" href="{% url dashboard_instances project.projectname %}">Instances</a></li>
-        <li><a id="lnk_images" href="{% url dashboard_images project.projectname %}">Images</a></li>
-        <li><a id="lnk_keypairs" href="{% url dashboard_keypairs project.projectname %}">Keys</a></li>
-        <li class="active"><a id="lnk_securitygroups" href="{% url dashboard_securitygroups project.projectname %}">Security Groups</a></li>
-        <li><a id="lnk_volumes" href="{% url dashboard_volumes project.projectname %}">Volumes</a></li>
-      </ul>
      <div id="right_content">
        <div id="page_head">
          <h2 id="page_heading">Security Groups</h2>
@@ -30,11 +22,11 @@
          </tr>
          {% for securitygroup in securitygroups %}
            <tr class="{% cycle 'odd' 'even' %}">
-             <td id="group_{{ securitygroup.id }}"><a href="{% url dashboard_securitygroups_detail project.projectname securitygroup.name %}">{{ securitygroup.name }}</a></td>
+             <td id="group_{{ securitygroup.id }}"><a href="{% url nova_securitygroups_detail project.projectname securitygroup.name %}">{{ securitygroup.name }}</a></td>
              <td id="group_{{ securitygroup.id }}_description" class="odd">{{ securitygroup.description }}</td>
              <td id="group_{{ securitygroup.id }}_rules">{{ securitygroup.rules|length }}</td>
              <td class="odd">
-               <form id="delete_group_{{ securitygroup.id }}" method="post" action="{% url dashboard_securitygroups_delete project.projectname securitygroup.name %}">
+               <form id="delete_group_{{ securitygroup.id }}" method="post" action="{% url nova_securitygroups_delete project.projectname securitygroup.name %}">
                  {% csrf_token %}
                  <input class="ui-state-default ui-corner-all" type="submit" value="Delete">
                </form>
@@ -43,7 +35,7 @@
          {% endfor %}
        </table>
        <div class="block">
-         <form id="add_group_form" method="post" action="{% url dashboard_securitygroups_add project.projectname %}">
+         <form id="add_group_form" method="post" action="{% url nova_securitygroups_add project.projectname %}">
            {% csrf_token %}
            <fieldset>
              <h3>New Group</h3>
