--- a/django-openstack/src/django_openstack/templates/django_openstack/nova/floatingips/_list.html
+++ b/django-openstack/src/django_openstack/templates/django_openstack/nova/floatingips/_list.html
@@ -19,7 +19,7 @@
                 {% endif %}
               </td>
             </tr>
-            {% if "None" in floating_ip.instance_id or "" in floating_ip.instance_id %}
+            {% if not "i-" in floating_ip.instance_id %}
               <form id="associate_floating_ip" method="post" action="{% url nova_floatingips_associate project.projectname %}">
                 {% csrf_token %}
                 <tr class="{{ rowcolors }}">
@@ -27,7 +27,6 @@
                   <td class="odd">{{ associate_form.instance }}</td>
                   <td>
                     <input id="floating_ip_{{ floating_ip.floating_ip_id }}" type="hidden" name="floating_ip" value="{{ floating_ip.public_ip }}" />
-                    {# TODO: disable this button or if instances are "none available" #}
                     <input id="associate_floating_ip_{{ floating_ip.floating_ip_id }}" class="attach" type="submit" value="Associate" />
                   </td>
                 </tr>
